Fixed looping car animation on mobile and triggering truck rotation only when in view

--- a/sass/animations/_element-in-view-new.scss
+++ b/sass/animations/_element-in-view-new.scss
@@ -43,6 +43,21 @@
 			}
 		}
 
+		&.inview {
+			.c3xgm-about-truck-shadow-container {
+
+				.c3xgm-about-truck-lines {
+					opacity: 1;
+					@include prefix(animation-fill-mode, both);
+				    @include prefix(animation-name, rotate);
+				    @include prefix(animation-delay, #{ ($test-delay + $test-step * 4) + "ms"});
+				    @include prefix(animation-duration, 2000ms);
+				    @include prefix(animation-timing-function, linear);
+				    @include prefix(animation-iteration-count, infinite);	
+				}
+			}
+		}
+
 		.c3xgm-about-truck-shadow-container {
 			@include prefix(animation-fill-mode, both);
 		    @include prefix(animation-name, fadeIn);
@@ -55,6 +70,7 @@
 			    @include prefix(animation-delay, #{ ($test-delay + $test-step * 4) + 1000 + "ms"});
 			    @include prefix(animation-duration, 2000ms);	
 			    @include prefix(animation-timing-function, ease-in-out);	
+			    @include prefix(animation-iteration-count, 1);	
 			}
 
 			.c3xgm-about-truck-bg-outer {
@@ -63,6 +79,7 @@
 			    @include prefix(animation-delay, #{ ($test-delay + $test-step * 4) + "ms"});
 			    @include prefix(animation-duration, 1000ms);
 			    @include prefix(animation-timing-function, ease-in-out);
+			    @include prefix(animation-iteration-count, 1);	
 			}
 
 			.c3xgm-about-truck-lines-holder {
@@ -70,16 +87,7 @@
 			    @include prefix(animation-name, fadeIn);
 			    @include prefix(animation-delay, 2.75s);
 			    @include prefix(animation-duration, 700ms);
-			}
-
-			.c3xgm-about-truck-lines {
-				opacity: 1;
-				@include prefix(animation-fill-mode, both);
-			    @include prefix(animation-name, rotate);
-			    @include prefix(animation-delay, #{ ($test-delay + $test-step * 4) + "ms"});
-			    @include prefix(animation-duration, 2000ms);
-			    @include prefix(animation-timing-function, linear);
-			    @include prefix(animation-iteration-count, infinite);	
+			    @include prefix(animation-iteration-count, 1);	
 			}
 
 			.c3xgm-about-shadow {
@@ -88,6 +96,7 @@
 			    @include prefix(animation-delay, #{ ($test-delay + $test-step * 4) + "ms"});
 			    @include prefix(animation-duration, 1200ms);
 			    @include prefix(animation-timing-function, ease-out);
+			    @include prefix(animation-iteration-count, 1);
 			}
 		}
 	}
