--- a/sass/components/_final-styles.scss
+++ b/sass/components/_final-styles.scss
@@ -8,8 +8,10 @@
 	 > div {
 		position: relative;
 		padding: 3em 0;
-		// @media(min-width: $tablet-height) {
-		// 	padding: 3em 0;
-		// }	
 	}
+}
+
+// .number 
+#c3xgm-about-number-63 {
+	height:0.8em;	
 }
